testsuite/tests/driver/invalid_syntax/w_project_keep_going/test.adb
with Test_A;
with Test_Dep;

procedure Test is
begin
   null;
end Test;
